# HearThat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  template_env  template_env.example
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
notebook/: 1-hachette-ingest.ipynb  2-hachette-azure-openai.ipynb  2-hachette-azure-speech.ipynb  4-hachette-extratranslate-summary.ipynb  hachette.ipynb
notebooks/: 01_ingest_and_summarize.ipynb  02_text_to_speech.ipynb  03_translate.ipynb
src/hearthat/: __init__.py  auth.py  cli.py  config.py  costs.py  ingest.py  limits.py  models.py  narration.py  pipeline.py  ssml.py  store.py  summarize.py  transcribe.py  translate.py  tts.py  vision.py
src/hearthat/ui/: __init__.py  app.py
src/hearthat/ui/templates/: base.html  index.html  settings.html
src/hearthat/ui/templates/partials/: job_row.html  settings_field.html  test_results.html
tests/: test_smoke.py
