[project]
name = "hearthat"
version = "0.1.0"
description = "Turn PDF books into multi-voice audiobooks with Azure Speech & Azure OpenAI."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "HearThat contributors" }]
keywords = ["audiobook", "azure", "tts", "speech", "openai", "pdf"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # Azure SDKs (Mai 2026 floors)
    "openai>=1.55",
    "azure-ai-documentintelligence>=1.0",
    "azure-cognitiveservices-speech>=1.42",
    "azure-ai-translation-text>=1.0",
    "azure-identity>=1.19",
    "azure-storage-blob>=12.24",
    "azure-core>=1.32",
    # Web UI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    # Config / models
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # HTTP / retries
    "httpx>=0.28",
    "tenacity>=9.0",
    # CLI
    "typer>=0.15",
    "rich>=13",
    # PDF fallback + storage
    "pypdf>=5.1",
    "aiosqlite>=0.20",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
    "types-aiofiles",
]
notebook = [
    "jupyterlab>=4.3",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "nbconvert>=7.16",
    "matplotlib>=3.9",
]

[project.scripts]
hearthat = "hearthat.cli:app"

[project.urls]
Homepage = "https://github.com/olivMertens/hearthat"
Issues = "https://github.com/olivMertens/hearthat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hearthat"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["notebooks", "data"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "SIM",            # simplify
    "RUF",            # ruff
    "ASYNC",          # async good practices
]
# B008: Typer/FastAPI require call-in-default; RUF006: background tasks tracked elsewhere.
ignore = ["E501", "B008", "RUF006", "ASYNC240"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "pypdf.*",
    "ipywidgets.*",
]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: hits real Azure endpoints (skipped without credentials)",
]
